# aegis-flow-multi-agent-ebpf-supply-chain-guard

./: .env.example  .gitignore  Dockerfile.orchestrator  README.md  docker-compose.yml  jest.config.js  package-lock.json  package.json
.github/workflows/: ci.yml
ebpf-agent/: Cargo.toml  Dockerfile.ebpf
ebpf-agent/src/: main.rs
src/: config.ts  index.ts
src/domain/: Events.ts
src/infrastructure/: Logger.ts  MetricsService.ts  NatsService.ts  OllamaService.ts  SigstoreService.ts  SlackService.ts
src/middleware/: auth.ts  requestId.ts  validate.ts
src/usecases/: Orchestrator.ts
tests/: Orchestrator.test.ts  auth.test.ts  requestId.test.ts  validate.test.ts
