[package]
name = "ebpf-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = "0.12.0"
aya-log = "0.2.0"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal"] }
async-nats = "0.34.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
